ru/cli/cli-ref/cloudrouter/cli-ref/v0/routing-instance/update-prefix-mask.md
---
editable: false
canonical: https://yandex.cloud/en/docs/cli/cli-ref/cloudrouter/cli-ref/v0/routing-instance/update-prefix-mask/
---

# yc cloudrouter v0 routing-instance update-prefix-mask

Update mask of a VPC network prefix of the routingInstance.

#### Command Usage

Syntax:

`yc cloudrouter routing-instance update-prefix-mask <ROUTING_INSTANCE-NAME>|<ROUTING_INSTANCE-ID> [Flags...] [Global Flags...]`

#### Flags

#|
||Flag | Description ||
|| `--id` | `string`

RoutingInstance id. ||
|| `--name` | `string`

RoutingInstance name. ||
|| `--async` | Display information about the operation in progress, without waiting for the operation to complete. ||
|| `--vpc-net-id` | `string`

ID of a VPC network. ||
|| `--zone` | `string`

ID of AZ. ||
|| `--prefix` | `string`

Prefix to update. ||
|| `--new-mask` | `int32`

The new mask. ||
|| `--remove-sub-prefixes` | Specifies whether existing sub-prefixes covered by the mask should be removed. ||
|#

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom configuration file. ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `-h`, `--help` | Display help for the command. ||
|#